# Vinsany

./: LICENSE  README.md  Vinsany.toml  pyproject.toml
Vinsany/: __init__.py  data_utils.py  web.py
Vinsany.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: main.py
