[project]
name = "Vinsany"
version = "0.0.2"
authors = [
  { name="dideng", email="3483434955@qq.com" },
]
description = "A python tools"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/bilibili-dideng/Vinsany"
Issues = "https://github.com/bilibili-dideng/Vinsany/issues"



